[package]
name = "silentpatchnfsug_rs"
version = "0.1.0"
edition = "2024"

[lints.rust]
non_snake_case = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"

[dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Memory"] }

[lib]
crate-type = ["cdylib"]