[package]
name = "silentpatchnfsug_rs"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "unwind"


[lints.rust]
non_snake_case = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Globalization",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Environment",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
] }

[lib]
crate-type = ["cdylib"]

[features]
default = [
    "patterns_use_hints",
    "patterns_can_serialize_hints",
    #"hooked_module",
    "hooked_function",
    "hooked_library",
]
patterns_use_hints = []
patterns_can_serialize_hints = []
memory_decls_only = []
hooked_module = []
hooked_function = []
hooked_library = []

[package.metadata.hook]
module_name = "target.exe"
library_name = "kernel32.dll"
function_name = "GetCommandLineA"
function_signature = "fn() -> *mut c_void"
